vite config + path setup

--- a/editor/index.html
+++ b/editor/index.html
@@ -17,5 +17,6 @@
         <div class="editor-page-content">I am the main page content.</div>
     </div>
     <div class="save-button">Save</div>
+    <script src="./editorMain.js"></script>
 </body>
 </html>
