script path again

--- a/editor/index.html
+++ b/editor/index.html
@@ -85,6 +85,6 @@
         <img src="../images/editor/map-image.png" alt="">
         <input type="number" min=0 class="exhibit-link" placeholder="ID #">
     </div>
-    <script src="/editor/editorMain.js"></script>
+    <script type="module" crossorigin src="/editor/editorMain.js"></script>
 </body>
 </html>
