Replaced querySelector objects with map

--- a/editor/index.html
+++ b/editor/index.html
@@ -71,6 +71,18 @@
                     <textarea class="editable-text-area image-caption" cols="80" rows="3" placeholder="Image Caption Text"></textarea>
                 </div>
             </div>
+            <div class="credit-grid-block group-block">
+                <div class="block-header">
+                    <span class="block-label">Credit Grid</span>
+                    <input type="button" class="block-add-button" id="addCredit" value="+">
+                </div>
+                <div class="block-item credit">
+                    <input type="text" class="editable-text-field credit-image-filename" placeholder="Image Filename">
+                    <input type="text" class="editable-text-field credit-name" placeholder="Name">
+                    <input type="text" class="editable-text-field credit-description" placeholder="Description">
+                    <input type="text" class="editable-text-field credit-location" placeholder="Location">
+                </div>
+            </div>
         </div>
     </div>
     <div class="map-button">
