editor functionality complete
content filling, loading and saving all working. TODO: map

--- a/editor/index.html
+++ b/editor/index.html
@@ -30,8 +30,8 @@
                     <input type="button" class="block-add-button" id="addLink" value="+">
                 </div>
                 <div class="block-item sidebar-link">
-                    <input type="text" class="editable-text-field" id="linkUrl" placeholder="URL">
-                    <input type="text" class="editable-text-field" id="linkLabel" placeholder="Label">
+                    <input type="text" class="linkUrl editable-text-field" placeholder="URL">
+                    <input type="text" class="linkLabel editable-text-field" placeholder="Label">
                 </div>
             </div>
             <div class="sidebar-team-block group-block" id="sidebarTeamBlock">
@@ -47,7 +47,7 @@
                 <input type="checkbox" class="input-checkbox" id="audioGuide">
                 Audio Guide?
             </label>
-            <input type="text" class="editable-text-field" id="nextPage" placeholder="Next Page ID">
+            <input type="number" class="editable-text-field" id="nextPage" placeholder="Next Page ID">
         </div>
 
         <div class="editor-page-content">
@@ -66,9 +66,9 @@
                     <input type="button" class="block-add-button" id="addImage" value="+">
                 </div>
                 <div class="block-item image">
-                    <input type="text" class="editable-text-field image-filename" placeholder="Image Filename">
-                    <input type="text" class="editable-text-field caption-title" placeholder="Caption Title">
-                    <textarea class="editable-text-area image-caption" cols="80" rows="3" placeholder="Image Caption Text"></textarea>
+                    <input type="text" class="imageFilename editable-text-field" placeholder="Image Filename">
+                    <input type="text" class="captionTitle editable-text-field" placeholder="Caption Title">
+                    <textarea class="imageCaption editable-text-area" cols="80" rows="3" placeholder="Image Caption Text"></textarea>
                 </div>
             </div>
             <div class="credit-grid-block group-block">
@@ -77,10 +77,10 @@
                     <input type="button" class="block-add-button" id="addCredit" value="+">
                 </div>
                 <div class="block-item credit">
-                    <input type="text" class="editable-text-field credit-image-filename" placeholder="Image Filename">
-                    <input type="text" class="editable-text-field credit-name" placeholder="Name">
-                    <input type="text" class="editable-text-field credit-description" placeholder="Description">
-                    <input type="text" class="editable-text-field credit-location" placeholder="Location">
+                    <input type="text" class="creditImageFilename editable-text-field" placeholder="Image Filename">
+                    <input type="text" class="creditName editable-text-field" placeholder="Name">
+                    <input type="text" class="creditDescription editable-text-field" placeholder="Description">
+                    <input type="text" class="creditLocation editable-text-field" placeholder="Location">
                 </div>
             </div>
         </div>
