complete page reconstruction from file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="intro closed">
-      <div class="welcome closed">
+      <div class="welcome">
           <div class="leftcol">
               <div class="awardsgallerylogo welcomeleftblock">
                   <img src="./images/pmi-awards-gallery-logo.svg" alt="PMI Awards Gallery">
