--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
+    <canvas class="webgl"></canvas>
     <div class="intro closed">
       <div class="welcome">
           <div class="leftcol">
