new gallery environment

--- a/index.html
+++ b/index.html
@@ -65,7 +65,43 @@
           </div>
       </div>
   </div>
-
+  <div class="menu hidden">
+    <img class="menuicon" src="./images/menu.png" width="25" height="25" alt="Open Menu">
+    <div class="navicons">
+        <div class="icon" id="01">
+            <img src="./images/glyph01.png" width="25" height="25" alt="PMI Project of the Year Award">
+            <div class="navtitle">PMI Project of the Year Award</div>
+        </div>
+        <div class="icon" id="02">
+            <img src="./images/glyph02.png" width="25" height="25" alt="PMI PMO of the Year Award">
+            <div class="navtitle">PMI PMO of the Year Award</div>
+        </div>
+        <div class="icon" id="03">
+            <img src="./images/glyph06.png" width="25" height="25" alt="PMI Fellow Award">
+            <div class="navtitle">PMI Fellow Award</div>
+        </div>
+        <div class="icon" id="04">
+            <img src="./images/glyph04.png" width="25" height="25" alt="PMI Eric Jenett Person of the Year Award">
+            <div class="navtitle">PMI Eric Jenett Person of the Year Award</div>
+        </div>
+        <div class="icon" id="05">
+            <img src="./images/glyph03.png" width="25" height="25" alt="PMI Rising Leader Award">
+            <div class="navtitle">PMI Rising Leader Award</div>
+        </div>
+        <div class="icon" id="06">
+            <img src="./images/glyph07.png" width="25" height="25" alt="PMI Research and Academic Awards">
+            <div class="navtitle">PMI Research and Academic Awards</div>
+        </div>
+        <div class="icon" id="07">
+            <img src="./images/glyph05.png" width="25" height="25" alt="PMI Chapter Awards">
+            <div class="navtitle">PMI Chapter Awards</div>
+        </div>
+    </div>
+</div>
+<div class="titlehover hidden">
+    <img class="hovericon" src="./images/glyph01.png" alt="PMI Project of the Year Award" width="50" height="50">
+    <div class="exhibitname">Exhibit Name</span>
+</div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
