--- a/index.html
+++ b/index.html
@@ -68,8 +68,12 @@
   <div class="menu hidden">
     <img class="menuicon" src="./images/menu.png" width="25" height="25" alt="Open Menu">
     <div class="navicons">
+        <div class="icon" id="04">
+            <img src="./images/glyph01.png" width="25" height="25" alt="About the PMI Awards">
+            <div class="navtitle">About the PMI Awards</div>
+        </div>
         <div class="icon" id="01">
-            <img src="./images/glyph01.png" width="25" height="25" alt="PMI Project of the Year Award">
+            <img src="./images/glyph04.png" width="25" height="25" alt="PMI Project of the Year Award">
             <div class="navtitle">PMI Project of the Year Award</div>
         </div>
         <div class="icon" id="02">
@@ -80,13 +84,9 @@
             <img src="./images/glyph06.png" width="25" height="25" alt="PMI Fellow Award">
             <div class="navtitle">PMI Fellow Award</div>
         </div>
-        <div class="icon" id="04">
-            <img src="./images/glyph04.png" width="25" height="25" alt="PMI Eric Jenett Person of the Year Award">
-            <div class="navtitle">PMI Eric Jenett Person of the Year Award</div>
-        </div>
         <div class="icon" id="05">
-            <img src="./images/glyph03.png" width="25" height="25" alt="PMI Rising Leader Award">
-            <div class="navtitle">PMI Rising Leader Award</div>
+            <img src="./images/glyph03.png" width="25" height="25" alt="PMI Eric Jenett Person of the Year Award & PMI Rising Leader Award">
+            <div class="navtitle">PMI Eric Jenett Person of the Year Award<br>PMI Rising Leader Award</div>
         </div>
         <div class="icon" id="06">
             <img src="./images/glyph07.png" width="25" height="25" alt="PMI Research and Academic Awards">
