--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>PMI Awards Gallery</title>
   </head>
   <body>
     <canvas class="webgl"></canvas>
@@ -15,8 +15,8 @@
                   <img src="./images/pmi-awards-gallery-logo.svg" alt="PMI Awards Gallery">
               </div>
               <div class="welcometext welcomeleftblock">
-                  Welcome to the  PMI Awards Gallery — honoring the people, ideas and outstanding teamwork leading us all toward a brighter future. Learn about our finalists and winners from the 2023 PMI Professional Awards, Chapter Awards, and Research & Academic Awards.
-                  <span class="eval">Meet the 2023 Evaluators</span>
+                Welcome to the PMI Awards Gallery — honoring the people, ideas and outstanding teamwork leading us all toward a brighter future. Learn about our finalists and winners from the 2023 PMI Professional Awards, Chapter Awards, Research & Academic Awards, and the PMIEF Award: #PMIAwards.
+                <span class="eval">Meet the 2023 Evaluators</span>
               </div>
               <div class="instructions welcomeleftblock">
                   <p class="navtip">Navigation tips</span>
