--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
           <div class="rightcol">
               <div class="introvideo">
-                  <video src="./videos/intro22.mp4" poster="./images/introposter.jpg" controls autoplay></video>
+                  <video src="./video/intro23.mp4" poster="./images/poster23.jpg" controls autoplay></video>
                   <p>
                       This 360-degree experience honors the best of the best in project management this year in a variety of categories.
                   </p>
