Update intro video for 10-26

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
           <div class="rightcol">
               <div class="introvideo">
-                  <video src="./video/intro23.mp4" poster="./images/poster23.jpg" controls autoplay></video>
+                  <video src="./video/intro23-update-on-1026.mp4" poster="./images/poster23.jpg" controls autoplay></video>
                   <p>
                       This 360-degree experience honors the best of the best in project management this year in a variety of categories.
                   </p>
